--- a/introduction-to-programming-sem1.tex
+++ b/introduction-to-programming-sem1.tex
@@ -5,6 +5,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{minted}
 
 \usepackage{hyperref}
 \hypersetup{
@@ -21,12 +22,16 @@
 
 \begin{document}
 	\maketitle
+	\tableofcontents
 	\section*{Links}
 	\begin{itemize}
 		\item Email: \href{mailto:saurabh@iiitl.ac.in}{saurabh@iiitl.ac.in}
 		\item Meeting room: \href{https://meetings.iitk.ac.in/b/sau-pvt-qye}{https://meetings.iitk.ac.in/b/sau-pvt-qye}
+		\item Shared Folder: \href{https://drive.google.com/drive/folders/1SxSwW\_9C1nrGAwu12QV1FejA4IWp5ZIP?usp=sharing\_eip\&ts=5fcdaf02}{Google Drive}
 	\end{itemize}
 	\newpage
 	
-	
+	\chapter{Computing Devices}
+		The simplest computing device is probably a calculator, all it does is basic arithmetic(addition, subtraction, multiplication and division). Some of the most common computing devices nowadays are laptops and mobile phones. These are better at performing tasks closer to out lifestyle.
+
 \end{document}
