--- a/Labs/sem1_electronics-lab1.tex
+++ b/Labs/sem1_electronics-lab1.tex
@@ -45,7 +45,7 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Determination of the Atomic \\ Weight of Magnesium \\ CHEM 101} % Title
+\title{Comparison of \\ LTSpice and CircuitLab} % Title
 
 \author{Pranav \textsc{Gade}} % Author name
 
@@ -57,9 +57,9 @@
 
 \begin{center}
 \begin{tabular}{l r}
+Batch: & CS\&AI \\
+Roll no.: & LCI2020010 \\
 Date Performed: & December 1, 2020 \\ % Date the experiment was performed
-% Partners: & James Smith \\ % Partner names
-% & Mary Smith \\
 Instructor: & Dr. Somesh Kumar % Instructor/supervisor
 \end{tabular}
 \end{center}
@@ -110,72 +110,95 @@ Circuit Lab is a convenient and accessible alternative to LTSpice. Since it runs
 %	SECTION 3
 %----------------------------------------------------------------------------------------
 
-\section{Procedure}
+\section{Operation}
 
-\begin{tabular}{ll}
-Mass of magnesium metal & = \SI{8.59}{\gram} - \SI{7.28}{\gram}\\
-& = \SI{1.31}{\gram}\\
-Mass of magnesium oxide & = \SI{9.46}{\gram} - \SI{7.28}{\gram}\\
-& = \SI{2.18}{\gram}\\
-Mass of oxygen & = \SI{2.18}{\gram} - \SI{1.31}{\gram}\\
-& = \SI{0.87}{\gram}
-\end{tabular}
+\subsection{LTSpice}
+\begin{enumerate}
+	\item When you open LTSpice, you can see the interface shown in fig. \ref{fig:ltspice_main}. The main components of this window are the menu bar, and the ribbon for quick access buttons, grouped by function.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Capture}
+		\caption[Main Interface of LTSpice]{Main Interface of LTSpice}
+		\label{fig:ltspice_main}
+	\end{figure}
+	\item Some notable tools included in the ribbon are load schematic, save, run, control buttons for navigating the schematic, and buttons for quick insertion of common components like resistors, capacitors, etc.
+	\item After creating a new schematic, we can add components to make our circuit. Fig. \ref{fig:ltspice_2} shows an example arrangement, an LCR circuit.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Capture2}
+		\caption{An LCR circuit and a graph of current through the inductor}
+		\label{fig:ltspice_2}
+	\end{figure}
+	\item We can then run the simulation for an interval of our choice. After the simulation, we can probe any component to see its state through the simulation. Fig. \ref{fig:ltspice_2} shows the state of the inductor for an simulation interval of 1 second.
+	\item We can also probe any two points on the circuit to look at the potential difference between them. Also, we can zoom into the graph wherever we like. We can see the graph of potential difference as well, zoomed in to include the first 200ms.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Capture3}
+		\caption{An LCR circuit with a graph of current as well as potential difference across the voltage source}
+		\label{fig:ltspice_3}
+	\end{figure}
+	\item Finally, we can save the schematic for easier access at a later time, as well as for sharing the schematic.
+\end{enumerate}
 
-Because of this reaction, the required ratio is the atomic weight of magnesium: \SI{16.00}{\gram} of oxygen as experimental mass of Mg: experimental mass of oxygen or $\frac{x}{1.31}=\frac{16}{0.87}$ from which, $M_{\ce{Mg}} = 16.00 \times \frac{1.31}{0.87} = 24.1 = \SI{24}{\gram\per\mole}$ (to two significant figures).
+\subsection{Circuit Lab}
+\begin{enumerate}
+	\item When you go to \href{https://www.circuitlab.com}{circuitlab.com} and launch CircuitLab, you are taken to the interface shown in fig. \ref{fig:circuitlab}. The main components here are the side panel which gives you the components available to include in your circuit, the canvas, where you build your circuit, and the toolbar, where you have the buttons to run the simulation.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{circuitlab}
+		\caption[CircuitLab interface]{CircuitLab interface}
+		\label{fig:circuitlab}
+	\end{figure}
+	\item A lot of components are included in the side panel, grouped neatly according to function.
+	\item We can create a new blank canvas, or start with the pre-made circuit. In this document, we will be discussing the latter. Fig. \ref{fig:circuitlab} shows the circuit.
+	\item We can run the simulation with the parameters of our choice, as shown in fig. \ref{fig:simulation}. We can adjust the in and out probes, as seen in fig. \ref{fig:circuitlab} to choose the points where we would like to get the simulation results.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=5cm,height=5cm,keepaspectratio]{simulation}
+		\caption[Simulation tab]{Simulation tab}
+		\label{fig:simulation}
+	\end{figure}
+	\item After the simulation is run, we get the results as a graph as shown in fig. \ref{fig:graphs}. Similar to LTSpice, we can zoom in to specific sections of the graph for closer inspection.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{graphs}
+		\caption[Simulation results]{Simulation results}
+		\label{fig:graphs}
+	\end{figure}
+	\item Finally, we can share the link of the circuit to others. Alternatively, we can save it in our account for future reference.
 
+
+\end{enumerate}
+\pagebreak
 %----------------------------------------------------------------------------------------
 %	SECTION 4
 %----------------------------------------------------------------------------------------
 
-\section{Results and Conclusions}
+\section{Conclusions}
 
-The atomic weight of magnesium is concluded to be \SI{24}{\gram\per\mol}, as determined by the stoichiometry of its chemical combination with oxygen. This result is in agreement with the accepted value.
+After evaluating both LTSpice and CircuitLab, we can conclude that both have their pros and cons. They are summarized below:
+\begin{itemize}
+	\item LTSpice runs natively on your computer, and is therefore much faster for complex simulations.
+	\item CircuitLab runs on all platforms, and makes sharing circuit designs very easy.
+	\item The number of components and customizability LTSpice provides is vastly more than CircuitLab.
+	\item Although CircuitLab provides graphs, they are limited compared to LTSpice, which can plot the state of individual components.
+	\item Although both are freeware, LTSpice requires you to provide your details to sign up. Otherwise, you cannot run any simulations after 30 minutes.
+\end{itemize}
 
-\begin{figure}[h]
-\begin{center}
-\includegraphics[width=0.65\textwidth]{placeholder} % Include the image placeholder.png
-\caption{Figure caption.}
-\end{center}
-\end{figure}
-
-%----------------------------------------------------------------------------------------
-%	SECTION 5
-%----------------------------------------------------------------------------------------
-
-\section{Discussion of Experimental Uncertainty}
-
-The accepted value (periodic table) is \SI{24.3}{\gram\per\mole} \cite{Smith:2012qr}. The percentage discrepancy between the accepted value and the result obtained here is 1.3\%. Because only a single measurement was made, it is not possible to calculate an estimated standard deviation.
-
-The most obvious source of experimental uncertainty is the limited precision of the balance. Other potential sources of experimental uncertainty are: the reaction might not be complete; if not enough time was allowed for total oxidation, less than complete oxidation of the magnesium might have, in part, reacted with nitrogen in the air (incorrect reaction); the magnesium oxide might have absorbed water from the air, and thus weigh ``too much." Because the result obtained is close to the accepted value it is possible that some of these experimental uncertainties have fortuitously cancelled one another.
-
-%----------------------------------------------------------------------------------------
-%	SECTION 6
-%----------------------------------------------------------------------------------------
-
-\section{Answers to Definitions}
-
-\begin{enumerate}
-\begin{item}
-The \emph{atomic weight of an element} is the relative weight of one of its atoms compared to C-12 with a weight of 12.0000000$\ldots$, hydrogen with a weight of 1.008, to oxygen with a weight of 16.00. Atomic weight is also the average weight of all the atoms of that element as they occur in nature.
-\end{item}
-\begin{item}
-The \emph{units of atomic weight} are two-fold, with an identical numerical value. They are g/mole of atoms (or just g/mol) or amu/atom.
-\end{item}
-\begin{item}
-\emph{Percentage discrepancy} between an accepted (literature) value and an experimental value is
-\begin{equation*}
-\frac{\mathrm{experimental\;result} - \mathrm{accepted\;result}}{\mathrm{accepted\;result}}
-\end{equation*}
-\end{item}
-\end{enumerate}
+\section{Results}
+After careful evaluation of pro and cons of CircuitLab as well as LTSpice, I will be using LTSpice. This is partly due to the limits CircuitLab imposes, and partly due to the larger array of components included in LTSpice.
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
-\bibliographystyle{apalike}
+\section*{References}
+\renewcommand{\theenumi}{\arabic{enumi}}
+\begin{itemize}
+	\item \href{https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html}{LTSpice website}
+	\item \href{https://www.circuitlab.com/}{circuitlab.com}
+\end{itemize}
 
-\bibliography{sample}
 
 %----------------------------------------------------------------------------------------
 
